Alpha 0.1.8.22

Alpha 0.1.8.21
- Fixed concurrency issue where a door could be toggled more than once under specific circumstances.
- Fixed drawbridges not respecting the defined OpenDirection value. Thanks, @Death By, for the bug report!
- Fixed being unable to delete any doors as a player when using the door's UID.

Alpha 0.1.8.20
- Fixed NPE when trying to open/close/toggle doors as a non-player. Thanks, @SlimeDog, for the bug report!

Alpha 0.1.8.19
- Added initial support for version 1.16 of minecraft.
- Fixed crash on startup if the custom translation file contained invalid lines. Thanks, @taoxiaobai, for the bug report!
- Fixed GUI bypassing user permissions regarding door attributes. Thanks, @PirateCraft, for the bug report!
- Added "bigdoors.user.lock" permission node for (un)locking doors.

Alpha 0.1.8.18
- Fixed bug with the latest version of Towny. Thanks, @Master, for the bug report!
- Added some methods to the Commander to make extending this plugin a bit easier (specifically for instances).
- Fixed stained glass (panes and blocks) changing colors in rotating door types (e.g. Doors) in 1.12. Thanks, @MrLoenkie, for the bug report!

Alpha 0.1.8.17
- Changed logging level of messages about no items being blacklisted or whitelisted from WARN to INFO. Thanks, @SlimeDog for the report!
- Drawbridges will now figure out which way to open when created in their open-position (i.e. flat). Thanks, @BobbyMC for the report!
- Fixed portcullises showing incorrect open direction options in the GUI. Thanks, @SlimeDog for the report!
- Fixed drawbridges showing invalid open direction options in the GUI.
- Added RedProtect support. Thanks, @Rebellion for the suggestion!
- Fixed default direction selection for doors that are open when toggled first.
- Added option to disable logging to the log file. Thanks, @SlimeDog for the suggestion!