@@ -1,4 +1,5 @@
 Alpha 0.1.8.22
+- Added information about why a command failed if the plugin failed to initialize properly.
 
 Alpha 0.1.8.21
 - Fixed concurrency issue where a door could be toggled more than once under specific circumstances.
